# Kr8md

./: CMakeLists.txt  README.md
include/kr8md/: bool_types.h  defaults.h  intrinsic_cast_types.h  intrinsic_types.h  kr8md.h  kr8md_std_helpers.h  pak.h  std_helpers.h
include/kr8md/operators/: add.h  any.h  compare.h  construct.h  divide.h  increment.h  load.h  multiply.h  operators.h  select.h  store.h  subtract.h
src/: kr8md_demo.cpp  kr8md_test.cpp
